Complete staff name refactor and service assignment